--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "init-db": "node init-database.js",
+    "db:init": "node init-database.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -38,6 +40,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
+    "@types/sqlite3": "^3.1.11",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +54,7 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.2.0",
@@ -57,6 +62,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
