--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.0",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
@@ -75,6 +75,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^11.0.0",
+    "baseline-browser-mapping": "^2.9.7",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
