feat: Refactor PDF handling for artworks
- Updated Artwork interface to replace legacy pdfLink with pdfPath for uploaded PDFs.
- Enhanced deleteRoomWithChildren function to remove associated PDFs when deleting rooms.
- Modified deleteSimpleElement to delete artwork PDFs before removing the artwork.
- Adjusted executeSupprimer to handle asynchronous deletion of elements and their associated PDFs.
- Updated database export functions to accommodate new pdfPath structure while maintaining legacy pdf_link for compatibility.
- Improved Canvas and ArtworkPropertiesModal components to manage new pdfPath and handle file uploads more effectively.
- Added shared uploads volume in docker-compose for PDF storage.
- Refined context menu actions to support async operations for element deletion.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,7 @@ services:
       FLASK_DEBUG: "1"
     volumes:
       - ./backend/rag:/app/rag:cached
+      - uploads_data:/app/uploads  # Volume partagé pour PDFs
     command: python -m flask --app rag/main_postgres.py run --host=0.0.0.0 --port=5000 --reload
 
   # Next.js App - Hot-reload  
