--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,7 +41,7 @@ services:
       FLASK_ENV: development
       FLASK_DEBUG: "1"
       OLLAMA_API_URL: http://ollama:11434
-      OLLAMA_MODEL: gemma:2b
+      OLLAMA_MODEL: mistral:latest
     depends_on:
       - ollama
     volumes:
