--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,7 +29,7 @@ services:
       FLASK_ENV: production
       PYTHONOPTIMIZE: 1
       OLLAMA_API_URL: http://ollama:11434
-      OLLAMA_MODEL: gemma:2b
+      OLLAMA_MODEL: mistral:latest
   
   # App - Production
   app:
