feat: Add TimeRegulator and VisitStyleSelector components with styling
- Implemented TimeRegulator component for time selection with localStorage support.
- Created VisitStyleSelector component for selecting visit styles with a styled list.
- Added WelcomeBgImg component for displaying a background image.
- Developed WelcomeMsg component for a welcoming message with responsive design.
- Enhanced Accueil page to integrate new components and manage language selection.
- Implemented MesChoix page to handle user choices and API interactions.
- Created Resume page to display generated parcours with navigation and progress tracking.
- Added CSS styles for all new components to ensure a cohesive design.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     networks:
       - museum-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+      test: ["CMD-SHELL", "ollama list || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -142,6 +142,28 @@ services:
       - museum-network
     healthcheck:
       test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # ==========================================
+  # SERVICE 5 : REACT FRONTEND CLIENT
+  # ==========================================
+  client:
+    build:
+      context: ./museum-voice
+      dockerfile: Dockerfile
+    container_name: museum-client
+    restart: unless-stopped
+    depends_on:
+      backend:
+        condition: service_healthy
+    ports:
+      - "8080:80"
+    networks:
+      - museum-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80"]
       interval: 30s
       timeout: 10s
       retries: 3
