--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,7 @@ PyPDF2>=3.0.0
 
 # Base scientifique
 numpy>=1.23.0
-scikit-learn>=1.0.0
+# scikit-learn>=1.0.0
 
 # TTS - Génération audio avec Piper
 piper-tts>=1.2.0
@@ -31,19 +31,19 @@ requests>=2.28.0
 # faiss-cpu>=1.7.2
 
 # Traitement avancé de texte
-torch>=2.0.0
+# torch>=2.0.0
 
 # Sécurité
-bcrypt>=4.0.0
+# bcrypt>=4.0.0
 
 # === OPTIONNELLES (fonctionnalités avancées) ===
 # LLM APIs
-groq>=0.4.0
-openai>=1.0.0
+# groq>=0.4.0
+# openai>=1.0.0
 
 # Framework RAG avancé
-langchain>=0.1.0
-langchain-text-splitters>=0.0.1
+# langchain>=0.1.0
+# langchain-text-splitters>=0.0.1
 
 # Interface utilisateur
 # streamlit>=1.28.0
