--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -170,13 +170,19 @@ services:
       # Backend API
       BACKEND_API_URL: http://backend:5000
       BACKEND_URL: http://backend:5000
-      NEXT_PUBLIC_BACKEND_URL: http://localhost:5000
+      
+      # Admin API (internal Docker network)
+      ADMIN_API_URL: http://app:3000
+      
+      # Client Frontend (internal Docker network)
+      NEXT_PUBLIC_CLIENT_URL: http://client:80
       
       # Next.js DEV
       NODE_ENV: development
       NEXT_TELEMETRY_DISABLED: 1
       
-      # App
+      # Public URLs
+      NEXT_PUBLIC_BACKEND_URL: http://localhost:5000
       NEXT_PUBLIC_API_URL: http://localhost:3000
     ports:
       - "3000:3000"
